# Vortex-ROOK

./: .gitignore  IMPROVEMENT_SUMMARY.md  ROOK.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/workflows/: deploy-pages.yml
.kiro/specs/01/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
lopdf/: Cargo.toml
lopdf/benches/: datetime.rs
src/: App.vue  LandingPage.vue  main.ts  wasm.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/lib/pdfium-v8-linux/: args.gn
src-tauri/lib/pdfium-v8-win/lib/: pdfium.dll.lib
src-tauri/lib/pdfium-wasm/: args.gn
src-tauri/lib/pdfium-wasm/lib/: pdfium.html
src-tauri/src/: content_parser.rs  document_parser.rs  export_handler.rs  font_handler.rs  font_manager.rs  font_service.rs  graphics_state.rs  image_handler.rs  layer_processor.rs  lib.rs  main.rs  models.rs  ocr_handler.rs  path_ops.rs  pdf_analyzer.rs  pdf_reconstructor.rs  print_service.rs  text_ops.rs
src-tauri/src/live_sync/: mod.rs  permission.rs  signaling.rs  sync_message.rs
src-wasm/: Cargo.toml
src-wasm/src/: docx_parser.rs  export.rs  image_cache.rs  lib.rs  models.rs
src/bridge/: environment.spec.ts  environment.ts  fileHandlers.ts  fontService.test.ts  fontService.ts  index.ts  liveSync.test.ts  liveSync.ts  ocrService.ts  pdfAnalyzer.ts  pdfParser.test.ts  pdfParser.ts  pdfTextHierarchy.ts  pdfTextUtils.ts  pngExporter.ts  printImposition.ts  types.ts  typographyBridge.test.ts  typographyBridge.ts  wasm.ts
src/canvas/: CanvasManager.test.ts  CanvasManager.ts  index.ts
src/components/: CanvasComponent.vue  EditableLayer.test.ts  EditableLayer.vue  FontManager.vue  FontPicker.vue  ImportOptionsDialog.vue  LayerImage.vue  LayersPanel.test.ts  LayersPanel.vue  LiveSyncPanel.vue  PagesPanel.vue  PdfStatusBar.vue  PropertiesPanel.test.ts  PropertiesPanel.vue  SettingsDialog.vue  SinglePageViewer.test.ts  SinglePageViewer.vue  TextEditorDemo.vue  TextEditorToolbar.vue  Toolbar.test.ts  Toolbar.vue  TypographyTestSuite.vue  WatermarkPanel.vue  index.ts
src/components/extra/: BackgroundTexture.vue  ClickSpark.vue  ElasticSlider.vue  ElectricBorder.vue  FlowingMenu.vue  GradualBlur.vue  RotatingText.vue  index.ts
src/components/typography/: AdvancedTypographyPanel.vue  ColorControls.vue  FontSelector.vue  FontSizeControl.vue  TextAlignmentControls.vue  TextFormatControls.vue  TextPresets.vue
src/composables/: index.ts  useImageLoader.test.ts  useImageLoader.ts  useTypography.test.ts  useTypography.ts
src/models/: index.ts  layer.property.test.ts  layer.test.ts  layer.ts
src/stores/: documentStore.property.test.ts  documentStore.test.ts  documentStore.ts  index.ts  syncStore.test.ts  syncStore.ts  themeStore.test.ts  themeStore.ts  uiStore.test.ts  uiStore.ts
src/styles/: main.css
src/tests/: accessibility.test.ts  e2e-workflows.test.ts  edge-cases.test.ts  integration.test.ts  performance.test.ts  security.test.ts
src/utils/: security.ts
