[package]
name = "rook"
version = "0.1.0"
description = "ROOK: Book Writing - A cross-platform layer editor for converting PDF and DOCX documents into editable layer-based book designs"
authors = ["ROOK Team"]
edition = "2021"
rust-version = "1.75"  # Minimum supported Rust version

[lib]
name = "rook"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
thiserror = "1"
lazy_static = "1.5"
pdfium-render = "0.8"
base64 = "0.22"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
docx-rust = "0.1"
printpdf = "0.7"

# Enhanced PDF parsing with lopdf
lopdf = { path = "../lopdf", features = ["embed_image"] }

# Font parsing
ttf-parser = "0.24"
font-kit = "0.14"

# File watching for font updates
notify = "6.1"

# HTTP client for Google Fonts API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Additional utilities
ordered-float = "4.2"
indexmap = "2.2"
regex-lite = "0.1"

# OCR support (optional - requires system libraries)
[dependencies.tesseract]
version = "0.14"
optional = true

[dependencies.leptonica-plumbing]
version = "1.3"
optional = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
ocr = ["tesseract", "leptonica-plumbing"]

# ============================================================================
# COMPILATION PROFILES
# ============================================================================

[profile.dev]
incremental = true
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2  # Optimize dependencies even in dev

[profile.release]
incremental = false
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"  # Strip symbols for smaller binary
panic = "abort"    # Smaller binary, faster unwinding

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"

[profile.dev.build-override]
opt-level = 0

[profile.release.build-override]
opt-level = 3

# ============================================================================
# LINTS
# ============================================================================

[lints.rust]
unsafe_code = "warn"
unused_must_use = "warn"

[lints.clippy]
all = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
