[package]
name = "book-creation-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Blob", "BlobPropertyBag", "Url", "File", "FileReader"] }
thiserror = "1"
base64 = "0.22"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
console_error_panic_hook = "0.1"
lazy_static = "1.5"

[profile.dev]
incremental = true
opt-level = 0

[profile.dev.package."*"]
opt-level = 2  # Optimize dependencies even in dev

[profile.release]
opt-level = "s"
lto = true
incremental = false
